# meta-mystia-network

./: .gitignore  Cargo.toml  README.md  build.rs  build_all.ps1
.cargo/: config.toml
.github/prompts/: plan-CSharpUsage.prompt.md  plan-CoreTypesProtocol.prompt.md  plan-FFIIntegration.prompt.md  plan-MembershipLeader.prompt.md  plan-MetaMystiaNetwork.prompt.md  plan-RoutingDiscovery.prompt.md  plan-TCPZeroWindow.prompt.md  plan-Tests.prompt.md  plan-Transport.prompt.md
csharp/: MetaMystiaNetwork.Tests.csproj  MetaMystiaNetwork.Tests.sln  MetaMystiaNetwork.cs  NetworkTests.cs
csharp/PeerHelper/: PeerHelper.csproj  PeerHelper.sln  Program.cs
src/: callback.rs  config.rs  discovery.rs  error.rs  ffi.rs  leader.rs  lib.rs  membership.rs  messaging.rs  protocol.rs  session_router.rs  transport.rs  types.rs
