[package]
name = "meta-mystia-network"
version = "0.1.0"
authors = ["AnYiEE <i@anyi.in>"]
edition = "2024"
description = "A P2P network library for MetaMystia Mod (https://github.com/MetaMikuAI/MetaMystia). Repository: https://github.com/AnYiEE/meta-mystia-network"
license = "AGPL-3.0-only"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[features]
default = []
logging = ["dep:tracing-subscriber"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
hostname = "0.4"
lz4_flex = { version = "0.12", default-features = false }
mdns-sd = { version = "0.18", features = ["async"], default-features = false }
parking_lot = "0.12"
postcard = { version = "1.1", features = ["alloc"], default-features = false }
rand = { version = "0.9", features = [
  "std",
  "thread_rng",
], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
socket2 = "0.6"

[build-dependencies]
thunk-rs = { version = "0.3", features = [
  "lib",
  "win7",
], default-features = false }
winres = "0.1"

[lib]
crate-type = ["cdylib"]
